olm/resources/prometheus/server/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: prometheus.88.99.186.195.nip.io
      http:
        paths:
          - backend:
              serviceName: prometheus-operated
              servicePort: 9090
            path: /
